<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, VoiceActivity!</string>
    <string name="app_name">Voice</string>
    <string name="welcome">Welcome to Consumer VOICE!</string>
    <string name="cont">Continue</string>
    <string name="quicktreatmentq1">When you needed treatment fast, did you get help on the phone?</string>
    <string name="wheel_question">This would be a question with a wheel-type answer.</string>
    <string name="button_question">This would be a question with a button-type answer.</string>
    <string name="drag_question">This would be a question with a drag-type answer.</string>
    <string name="picture_question">This would be a question with a picture-type answer.</string>
    <string name="slider_question">This would be a question with a slider-type answer.</string>
    <string name="back">Go Back</string>
    <string name="next">Next</string>
    <string name="activity_newquestion"></string>
    <string name="activity_thankyou"></string>
    <string name="activity_questionactivity"></string>
    <string name="activity_providerinformation"></string>
    <string name="thank_you_text">Thank you for taking the survey!</string>
    <string name="activity_confirmation_text">Thank you for taking the survey! After you\'ve submitted your responses, you can claim your reward!</string>
    <string name="submit">Submit</string>
    <string name="activity_confirmationactivity">Voice</string>
    <string name="button_finish">Finish</string>
    <string name="button_sync">Sync</string>
    <string name="provider_submit">Submit</string>
    <string name="provider_info">Provider information</string>
    <string name="provider_q">Please enter the name of this facility\'s provider:</string>
    <string name="location_q">Please enter the this facility\'s location: </string>

</resources>
