<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
	<LinearLayout android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >

	    <TextView
	        android:id="@+id/locationResponse"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text= "@string/location_q" />	
	    
	    <EditText android:id = "@+id/location"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:scrollbars="vertical"
	        android:layout_weight ="1"/>
	    <TextView
	        android:id="@+id/providerResponse"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/provider_q" />	
	    
	    <EditText android:id = "@+id/provider"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:scrollbars="vertical"
	        android:layout_weight ="1"/>
	
		<Button android:id = "@+id/Submit"
		    android:text = "@string/provider_submit"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:onClick="onSubmitButtonClick" />
		</LinearLayout>
</LinearLayout>