<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
	>
	
	<LinearLayout
	    android:id="@+id/linearLayoutText"
	    android:layout_width="fill_parent"
	    android:layout_height="80dp" >

		<TextView
		    android:id="@+id/wheelText"
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:textSize="48dp"
		    android:text="@string/wheel_question" />
	</LinearLayout>
	
	<AbsoluteLayout 
	    android:id="@+id/contentLayout"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:layout_weight="1"
	    android:background="#6699ff" >

		<edu.upenn.cis350.voice.WheelQuestionView
		    android:id="@+id/wheelQuestionView"
		    android:layout_width="500dp"
		    android:layout_height="500dp" 
		    android:layout_x="390dp" 
		    android:layout_y="70dp" />

		<ImageView
		    android:id="@+id/imageView1"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:src="@drawable/selector"
		    android:layout_x="590dp"
		    android:layout_y="0dp" />
	    
	</AbsoluteLayout>
    
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="fill" >

        <Button
            android:id="@+id/wheelPrev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:onClick="onBackButtonClick"
            android:text="@string/back" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="300dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.50"
            android:orientation="vertical" >

        </LinearLayout>

        <Button
            android:id="@+id/wheelNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:onClick="onNextButtonClick"
            android:text="@string/next" />
    </LinearLayout>

</LinearLayout>