<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"  >

   	<LinearLayout
	    android:id="@+id/linearLayoutText"
	    android:layout_width="fill_parent"
	    android:layout_height="80dp" >

		<TextView
		    android:id="@+id/dragText"
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:textSize="48dp"
		    android:text="@string/drag_question" />

	</LinearLayout> 
	
	<LinearLayout
	    android:id="@+id/linearLayoutView"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:layout_weight="1" 
	    android:background="#99FFFF"
	    android:orientation="vertical">
		
		<TextView
		    android:id="@+id/dragText"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:textSize="36dp"
		    android:textColor="#5f9ea0"
		    android:text="Please drag your image-response into the box." />
		
	<edu.upenn.cis350.voice.DragQuestionView
        android:id="@+id/dragQuestionView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"  />
	
	</LinearLayout>
	
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="fill" >

        <Button
            android:id="@+id/dragPrev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:onClick="onBackButtonClick"
            android:text="@string/back" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="300dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.50"
            android:orientation="vertical" >

        </LinearLayout>

        <Button
            android:id="@+id/dragNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:onClick="onNextButtonClick"
            android:text="@string/next" />
    </LinearLayout>

</LinearLayout>