<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
	
	<LinearLayout
	    android:id="@+id/linearLayoutText"
	    android:layout_width="fill_parent"
	    android:layout_height="80dp" >

		<TextView
		    android:id="@+id/sliderText"
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:textSize="48dp"
		    android:text="@string/slider_question" />

	</LinearLayout>

	<LinearLayout
	    android:id="@+id/linearLayoutView"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:layout_weight="1" 
	    android:background="#6699ff"
	    android:orientation="vertical">
		

		<edu.upenn.cis350.voice.SliderQuestionView
		    android:id="@+id/sliderQuestionView"
		    android:layout_width="900dp"
		    android:layout_height="100dp"
		    android:layout_marginTop="100dp"
		    android:layout_gravity="center|center_horizontal"
		    android:indeterminateOnly="false"
		    android:progressDrawable="@drawable/scrollbar_progress" />
		
		<TextView
		    android:id = "@+id/SliderNums"
		    android:layout_width = "wrap_content"
		    android:layout_height = "wrap_content"
		    android:textSize = "40dp"
		    android:paddingTop="5dp"
		    android:layout_marginLeft="175dp"
		    android:gravity="center|center_horizontal"
		    android:text = "1         2         3         4         6         7         8         9         10"
		    android:textColor="#000000" />
	
	</LinearLayout>
    
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="fill" >

        <Button
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:onClick="onBackButtonClick"
            android:text="@string/back" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="300dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.50"
            android:orientation="vertical" >

        </LinearLayout>

        <Button
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:onClick="onNextButtonClick"
            android:text="@string/next" />
    </LinearLayout>

</LinearLayout>